@@ -8,13 +8,13 @@ import com.start.quick.model.ItemsModel;
 import com.start.quick.model.SubCategoryModel;
 import com.start.quick.repository.CategoryRepository;
 import com.start.quick.service.CategoryService;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.util.ObjectUtils;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 public class CategoryServiceImpl implements CategoryService {
@@ -52,21 +52,8 @@ public class CategoryServiceImpl implements CategoryService {
     @Transactional(propagation = Propagation.SUPPORTS)
     @Override
     public List<CategoryItemsModel> findFreshItemsByCategoryId(Integer rootId) {
-        Object[] objects = this.categoryRepository.findFreshItemsByCategoryId(rootId);
-
-        List<CategoryItemsViewModel> itemsViewModels = Arrays.stream(objects).map(item -> {
-            CategoryItemsViewModel itemsViewModel = new CategoryItemsViewModel();
-            Object[] values = ObjectUtils.toObjectArray(item);
-            itemsViewModel.setId(Integer.valueOf(String.valueOf(values[0])));
-            itemsViewModel.setName(String.valueOf(values[1]));
-            itemsViewModel.setSlogan(String.valueOf(values[2]));
-            itemsViewModel.setCategoryImage(String.valueOf(values[3]));
-            itemsViewModel.setBgColor(String.valueOf(values[4]));
-            itemsViewModel.setItemId(String.valueOf(values[5]));
-            itemsViewModel.setItemName(String.valueOf(values[6]));
-            itemsViewModel.setItemUrl(String.valueOf(values[7]));
-            return itemsViewModel;
-        }).collect(Collectors.toList());
+        Pageable pageable = PageRequest.of(0, 6);
+        List<CategoryItemsViewModel> itemsViewModels = this.categoryRepository.pageFreshItemsByCategoryId(rootId, pageable).toList();
 
         Map<Integer, CategoryItemsModel> map = new HashMap<>();
         for (CategoryItemsViewModel item : itemsViewModels) {
